--- a/okteto.yml
+++ b/okteto.yml
@@ -5,4 +5,4 @@ deploy:
   commands:
     # - curl https://get.okteto.com -sSfL | OKTETO_VERSION=2.31.0 sh
     - okteto destroy --log-level debug --file backend/test_domain/okteto.yml
-    - okteto deploy --build --log-level debug --file backend/test_domain/okteto.yml 
+    - okteto deploy --log-level debug --file backend/test_domain/okteto.yml 
