--- a/okteto.yml
+++ b/okteto.yml
@@ -4,6 +4,6 @@ deploy:
   remote: true
   commands:
     # - curl https://get.okteto.com -sSfL | OKTETO_VERSION=2.31.0 sh
-    - okteto destroy --log-level debug --file backend/test_domain/okteto.yml
-    - sleep 60
-    - okteto deploy --log-level debug --file backend/test_domain/okteto.yml 
+    - okteto destroy --log-level debug --file backend/test_domain/okteto.yml --name test-subdomain
+    - sleep 20
+    - okteto deploy --log-level debug --file backend/test_domain/okteto.yml --name test-subdomain
